--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <link rel="stylesheet" href="./CSS/style.css" />
     <title>3 cards component</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="container1"></div>
+      <div class="container2"></div>
+      <div class="container3"></div>
+    </div>
+  </body>
 </html>
