Comecando estilização das fontes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   </head>
   <body>
     <div class="container">
-      <div class="container1"></div>
+      <div class="container1">
+        <img src="./Images/icon-sedans.svg" alt="" />
+        <h1>SEDANS</h1>
+        <p>
+          Choose a sedan for its affordability and excellent fuel economy. Ideal
+          for cruising in the city or on your next road trip.
+        </p>
+        <button type="submit">Learn More</button>
+      </div>
       <div class="container2"></div>
       <div class="container3"></div>
     </div>
