--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <img src="./Images/icon-sedans.svg" alt="" />
         <h1>SEDANS</h1>
         <p>
-          Choose a sedan for its affordability and excellent fuel economy. Ideal
-          for cruising in the city or on your next road trip.
+          Choose a sedan for its <br />affordability and excellent <br />fuel
+          economy. Ideal for <br />
+          cruising in the city or on <br />
+          your next road trip.
         </p>
         <button type="submit">Learn More</button>
       </div>
