Estilização do segundo container

--- a/index.html
+++ b/index.html
@@ -17,9 +17,18 @@
           cruising in the city or on <br />
           your next road trip.
         </p>
-        <button type="submit">Learn More</button>
+        <button type="submit" class="btn">Learn More</button>
       </div>
-      <div class="container2"></div>
+      <div class="container2">
+        <img src="./Images/icon-suvs.svg" alt="" />
+        <h1>SUVS</h1>
+        <p>
+          SUVs Take an SUV for its spacious <br />interior, power, and
+          <br />versatility. Perfect for your <br />
+          next family vacation and <br />off-road adventures.
+        </p>
+        <button type="submit" class="btn">Learn More</button>
+      </div>
       <div class="container3"></div>
     </div>
   </body>
