Estilização do terceiro container

--- a/index.html
+++ b/index.html
@@ -29,7 +29,17 @@
         </p>
         <button type="submit" class="btn">Learn More</button>
       </div>
-      <div class="container3"></div>
+      <div class="container3">
+        <img src="./Images/icon-luxury.svg" alt="" />
+        <h1>LUXURY</h1>
+        <p>
+          ruise in the best car brands <br />
+          without the bloated prices. <br />
+          Enjoy the enhanced comfort <br />of a luxury rental and arrive <br />
+          in style.
+        </p>
+        <button type="submit" class="btn">Learn More</button>
+      </div>
     </div>
   </body>
 </html>
