--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           cruising in the city or on <br />
           your next road trip.
         </p>
-        <button type="submit" class="btn">Learn More</button>
+        <button type="submit" class="btn1">Learn More</button>
       </div>
       <div class="container2">
         <img src="./Images/icon-suvs.svg" alt="" />
@@ -27,7 +27,7 @@
           <br />versatility. Perfect for your <br />
           next family vacation and <br />off-road adventures.
         </p>
-        <button type="submit" class="btn">Learn More</button>
+        <button type="submit" class="btn2">Learn More</button>
       </div>
       <div class="container3">
         <img src="./Images/icon-luxury.svg" alt="" />
@@ -38,7 +38,7 @@
           Enjoy the enhanced comfort <br />of a luxury rental and arrive <br />
           in style.
         </p>
-        <button type="submit" class="btn">Learn More</button>
+        <button type="submit" class="btn3">Learn More</button>
       </div>
     </div>
   </body>
